--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -6,8 +6,7 @@
   --highlight-color: #2196f3;
   --mail-tel-bottom-color: rgba(255, 255, 255, 0.6);
   --secondary-icon-color: rgba(255, 255, 255, 0.1);
-  --main-icon-color: #AFB1B8;
- 
+  --main-icon-color: #afb1b8;
 }
 
 body {
@@ -47,7 +46,7 @@ a:active {
 }
 
 .menu {
-  border-bottom: 1px solid #ECECEC;
+  border-bottom: 1px solid #ececec;
 }
 
 .menu-flex {
@@ -136,10 +135,10 @@ nav {
 
 .banner {
   background: linear-gradient(
-    var(--secondary-background-color-transparent),
-    var(--secondary-background-color-transparent)
-  ),
-  url(../images/banner-photo.jpg);
+      var(--secondary-background-color-transparent),
+      var(--secondary-background-color-transparent)
+    ),
+    url(../images/banner-photo.jpg);
   max-width: 1600px;
   background-size: cover;
   margin: 0 auto;
@@ -196,7 +195,7 @@ nav {
 
 .article-box {
   border-radius: 4px;
-  background:#F5F4FA;
+  background: #f5f4fa;
   width: 270px;
   height: 120px;
   display: flex;
@@ -254,7 +253,7 @@ img {
 }
 
 .social-icons:hover {
-  fill: #FFFFFF;
+  fill: #ffffff;
   cursor: pointer;
 }
 
@@ -290,7 +289,8 @@ img {
 
 .team-card {
   background-color: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   text-align: center;
 }
@@ -336,7 +336,7 @@ img {
   width: 106px;
   height: 60px;
   padding: 15px 30px;
-  fill: #AFB1B8;
+  fill: #afb1b8;
   background-clip: content-box;
 }
 
@@ -346,7 +346,6 @@ img {
 }
 
 .bottom {
-  /* padding-top: 60px; */
   padding-bottom: 60px;
   background-color: var(--secondary-background-color);
   color: #ffffff;
@@ -411,7 +410,8 @@ img {
 }
 
 .portfolio-card:hover {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .portfolio-name {
@@ -444,7 +444,8 @@ img {
 .portfolio-button:hover {
   background-color: var(--highlight-color);
   color: #ffffff;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-button:focus {
